# ecse429

./: README.md  \
thingifier-tests/: .gitignore  README.md  pyproject.toml  random_behave.py
thingifier-tests/features/: environment.py
thingifier-tests/features/addition/: add_numbers.feature
thingifier-tests/features/categories/: Create_Category.feature  Delete_Category.feature  US11_Create_Category.feature  US12_Delete_Category.feature  US13_Update_Category.feature  US14_View_All_Categories.feature  US15_View_Specific_Category.feature  Update_Category.feature  View_All_Categories.feature  View_Specific_Category.feature
thingifier-tests/features/interop/: US16_assign_todo_to_category.feature  US17_assign_todo_to_project.feature  US18_remove_todo_from_project.feature  US19_remove_category_from_todo.feature  US20_assign_project_to_category.feature  US20_see_all_todos_for_project.feature
thingifier-tests/features/projects/: Create_Project.feature  Delete_Project.feature  Modify_Project.feature  US10_View_All_Active_Projects.feature  US6_Create_Project.feature  US7_Modify_Project.feature  US8_Delete_Project.feature  US9_View_All_Projects.feature  View_All_Active_Projects.feature  View_All_Projects.feature
thingifier-tests/features/steps/: add_steps.py  categories_steps.py  interop_steps.py  projects_steps.py  shared_steps.py  (+1 more)
thingifier-tests/performance_tests/: conftest.py  plot_times.py  run_performance_tests.py
thingifier-tests/thingifier_tests/: __init__.py  conftest.py  test_categories.py  test_common.py  test_projects.py  test_todos.py  todos_test.py
(+60 files in other folders)
